<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".ui.activity.more.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintHeight_default="percent"
            android:text="Settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backbutton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintHeight_default="percent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/back_btn"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/colors_bg"
        android:gravity="start"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintWidth_percent="0.85">

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:drawableEnd="@drawable/ic_go"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="Help"
            android:textColor="@color/white"
            android:textSize="16sp"

            />

        <View
            android:layout_width="280dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:drawableEnd="@drawable/ic_go"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="16sp"

            />

        <View
            android:layout_width="280dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:background="@color/blue" />


        <TextView
            android:id="@+id/tvShare"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:drawableEnd="@drawable/ic_go"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="16sp"

            />

        <View
            android:layout_width="280dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:drawableEnd="@drawable/ic_go"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="16sp"

            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>